--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <input type="text" v-model="string" />
       <h2><em>Computed values</em> en temps réel</h2>
       <ul>
-        <li>{{string}}.length = {{strlen}}</li>
-        <li>Mots dans {{string}} = {{wordCount}}</li>
+        <li>Lettres dans : {{string}} = {{strlen}}</li>
+        <li>Mots dans : {{string}} = {{wordCount}}</li>
         <li>{{string}} en majuscule = {{upper}}</li>
         <li>{{string}} mélangé = {{charivari}}</li>
       </ul>
